[gd_scene load_steps=9 format=3 uid="uid://3sasgessjhmu"]

[ext_resource type="Script" path="res://BIOS.gd" id="1_k57y5"]
[ext_resource type="Texture2D" uid="uid://dciubsv8cwaas" path="res://assets/bios/digi.png" id="2_ydwx1"]
[ext_resource type="FontFile" uid="uid://jnyn0kqian0r" path="res://assets/fonts/OpenSans-Light.ttf" id="4_csocp"]
[ext_resource type="Texture2D" uid="uid://0dd83q2vn55" path="res://assets/bios/chewyt.png" id="4_gwyat"]
[ext_resource type="Texture2D" uid="uid://bbrhsu5a28ttr" path="res://assets/bios/XYZ.png" id="4_pslmb"]
[ext_resource type="FontFile" uid="uid://gwcpcgvtp3cq" path="res://assets/fonts/joystix.monospace-regular.otf" id="6_npbu0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t60oc"]
content_margin_top = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhva4"]
content_margin_top = 6.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="BIOS" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k57y5")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Progress" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.7
anchor_right = 0.8
anchor_bottom = 0.7
offset_top = -12.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
max_value = 10.0
step = 1.0
show_percentage = false

[node name="ProgressTimer" type="Timer" parent="."]
one_shot = true

[node name="IcoDigi" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.4
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ydwx1")
expand_mode = 1
stretch_mode = 5

[node name="IcoXYZ" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.4
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_pslmb")
expand_mode = 1
stretch_mode = 5

[node name="IcoChT" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.4
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gwyat")
expand_mode = 1
stretch_mode = 5

[node name="BootKeyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.8
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_csocp")
text = "Press F2 to change the BOOTLOADER"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
theme_override_fonts/font = ExtResource("6_npbu0")
theme_override_font_sizes/font_size = 0
text = "reg/aut"

[node name="PopUp" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 1, 1)

[node name="PopUpBG" type="ColorRect" parent="PopUp"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24
anchor_top = 0.24
anchor_right = 0.76
anchor_bottom = 0.76

[node name="Boot" type="VBoxContainer" parent="PopUp"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2

[node name="BootLabel" type="Label" parent="PopUp/Boot"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_npbu0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_t60oc")
text = "CHOOSE YOUR BOOTLOADER:"
horizontal_alignment = 1

[node name="BootDigios" type="Button" parent="PopUp/Boot"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.3, 0.3, 0.3, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_focus_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_hover_pressed_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("6_npbu0")
theme_override_styles/normal = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/hover = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/focus = SubResource("StyleBoxFlat_vhva4")
text = "DIGIOS"

[node name="BootXyz" type="Button" parent="PopUp/Boot"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.3, 0.3, 0.3, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_focus_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_hover_pressed_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("6_npbu0")
theme_override_styles/normal = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/hover = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/focus = SubResource("StyleBoxFlat_vhva4")
text = "XYZ KORPORACE"

[node name="BootChT" type="Button" parent="PopUp/Boot"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.3, 0.3, 0.3, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_focus_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_hover_pressed_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_disabled_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("6_npbu0")
theme_override_styles/normal = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/hover = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vhva4")
theme_override_styles/focus = SubResource("StyleBoxFlat_vhva4")
text = "T"

[connection signal="timeout" from="ProgressTimer" to="." method="_on_progress_timer_timeout"]
[connection signal="pressed" from="PopUp/Boot/BootDigios" to="." method="_on_boot_digios_pressed"]
[connection signal="pressed" from="PopUp/Boot/BootXyz" to="." method="_on_boot_xyz_pressed"]
[connection signal="pressed" from="PopUp/Boot/BootChT" to="." method="_on_boot_ch_t_pressed"]
